Fiquei testando aqui como levar o menu ao lado do logo, estou estudando isso. Precisa ver tbm a parte do js, pois qdo atualizamos a pagina o jQuery is not defined.

--- a/css/foundation.css
+++ b/css/foundation.css
@@ -5803,3 +5803,9 @@ a.thumbnail {
 
 .long-delay {
   animation-delay: 700ms !important; }
+
+ .navegacao-site{
+background-color: #3C1D3D;
+text-align: center;
+
+ } 
