--- a/web/css/app-effects.css
+++ b/web/css/app-effects.css
@@ -1,13 +1,14 @@
-a.menu{
+.menu a{
     -webkit-transition:	all 2s linear;
 	-moz-transition: all 2s linear;
 	-o-transition: all 2s linear;
     transition: all 2s linear;
-    color:black;
+   
 	
 }
 
-a.menu:hover{
+.menu a:hover{
 
-    color:yellow;
+    color: #fff;
+    
 }
