--- a/web/css/app.css
+++ b/web/css/app.css
@@ -70,6 +70,18 @@
   
 /* FIM HEADER  */
 
+/*ESTILO DO TEXTO - DO SITE*/
+.p .h1 .h2 .h4 .menu{
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+/* FIM ESTILO DO TEXTO*/
+
+.visualizar-botao{
+  color: rgb(7, 7, 7);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+}
+
+
 /* INÍCIO FOOTER */
 
 .footer {
