--- a/web/css/app.css
+++ b/web/css/app.css
@@ -72,13 +72,14 @@
 
 /*ESTILO DO TEXTO - DO SITE*/
 .p .h1 .h2 .h4 .menu{
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 /* FIM ESTILO DO TEXTO*/
 
-.visualizar-botao{
-  color: rgb(7, 7, 7);
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+.button{
+  color: rgb(255, 255, 255);
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: rgb(155, 61, 61);
 }
 
 
@@ -96,7 +97,11 @@
 }
 
 .footer-info {
+  
     background-color: #74474F;
+    margin-top: 10px;
+    
+    
 }
 
 .footer-details {
@@ -106,6 +111,7 @@
 .footer .info p {
   margin-bottom: 0;
 }
+
 
 .facebook {
 	background-image: url(.\images\facebook.png);
