--- a/web/css/app.css
+++ b/web/css/app.css
@@ -71,15 +71,23 @@
 /* FIM HEADER  */
 
 /*ESTILO DO TEXTO - DO SITE*/
-.p .h1 .h2 .h4 .menu{
+body{
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.quem-somos{
+
+  text-align: center;
+  font-size: 20px;
+  margin-top: 1px;
+  margin: 40px;
+  
+}
+
+.foto-produtos{
+  margin-bottom: 10px;
 }
 /* FIM ESTILO DO TEXTO*/
-
-.button{
-  color: rgb(255, 255, 255);
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
 
 
 /* INÍCIO FOOTER */
@@ -101,6 +109,7 @@
 
 .footer-details {
   background-color: #C15666;
+  margin-top: 40px;
 }
 
 .footer .info p {
