--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,4 +1,13 @@
+/* ESTILO GERAL */
+* {
+  font-family: "Sura", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+}
+
 /* INICIO HEADER */
+
+.middle-content-section h1 {
+  font-family: 'Fredericka the Great', cursive;
+}
 
 .top-bar,
 .top-bar ul {
@@ -6,7 +15,7 @@
 }
 
 .hero-full-screen {
-    height: 80vh;
+    height: 90vh;
     display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
@@ -70,34 +79,6 @@
   
   
 /* FIM HEADER  */
-
-/*ESTILO DO TEXTO - DO SITE*/
-.topicos{
-  font-family: 'Sura', serif;
-}
-
-p{
-  font-family: 'Sura', serif;
-}
-
-.titulo-principal{
-  font-family: 'Fredericka the Great', cursive;
-}
-
-.quem-somos{
-
-  text-align: center;
-  font-size: 20px;
-  margin-top: 1px;
-  margin: 40px;
-  
-}
-
-.foto-produtos{
-  margin-bottom: 10px;
-}
-/* FIM ESTILO DO TEXTO*/
-
 
 /* INÍCIO FOOTER */
 
