--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,7 +1,7 @@
 /* ESTILO GERAL */
- * {
-
- }
+* {
+  
+}
 
 /* INICIO HEADER */
 
@@ -11,73 +11,73 @@
 
 .top-bar,
 .top-bar ul {
-    background-color:transparent;
+  background-color:transparent;
 }
 
 .hero-full-screen {
-    height: 90vh;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-justify-content: space-between;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    background: url("http://placehold.it/1500/3d3d3d/?text=+") center center no-repeat;
-    background-size: cover;
-  }
-  
-  .hero-full-screen .middle-content-section {
-    text-align: center;
-    color: #fefefe;
-  }
-  
-  .hero-full-screen .top-content-section {
-    width: 100%;
-  }
-  
-  .hero-full-screen .bottom-content-section {
-    padding: 1rem;
-  }
-  
-  .hero-full-screen .bottom-content-section svg {
-    height: 2.75rem;
-    width: 2.75rem;
-    fill: #fefefe;
-  }
-  
-  .hero-full-screen .top-bar {
-    background: transparent;
-  }
-  
-  .hero-full-screen .top-bar .menu {
-    background: transparent;
-  }
-  
-  .hero-full-screen .top-bar .menu-text {
-    color: #fefefe;
-  }
-  
-  .hero-full-screen .top-bar .menu li {
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-align-items: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  
-  .hero-full-screen .top-bar .menu a {
-    color: darkgrey;
-    font-weight: bold;
-  }
-  
-  
+  height: 90vh;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  background: url("http://placehold.it/1500/3d3d3d/?text=+") center center no-repeat;
+  background-size: cover;
+}
+
+.hero-full-screen .middle-content-section {
+  text-align: center;
+  color: #fefefe;
+}
+
+.hero-full-screen .top-content-section {
+  width: 100%;
+}
+
+.hero-full-screen .bottom-content-section {
+  padding: 1rem;
+}
+
+.hero-full-screen .bottom-content-section svg {
+  height: 2.75rem;
+  width: 2.75rem;
+  fill: #fefefe;
+}
+
+.hero-full-screen .top-bar {
+  background: transparent;
+}
+
+.hero-full-screen .top-bar .menu {
+  background: transparent;
+}
+
+.hero-full-screen .top-bar .menu-text {
+  color: #fefefe;
+}
+
+.hero-full-screen .top-bar .menu li {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.hero-full-screen .top-bar .menu a {
+  color: darkgrey;
+  font-weight: bold;
+}
+
+
 /* FIM HEADER  */
 
 /* GRID DE PRODUTO */
@@ -105,12 +105,26 @@
   font-weight: 700
 }
 
+/*INICIO BUTTON */
+
+.btn{
+  display: inline-block;
+
+  margin: 0 0 10rem;
+  padding: .85em 1em;
+  line-height: 1;
+  text-align: center;
+  cursor: pointer;
+}
+
+/* FIM BUTTON */
+
 /* INÍCIO FOOTER */
 
 .footer {
-    padding: 1rem 0;
-    align-items: center;
-    color:#fefefe;
+  padding: 1rem 0;
+  align-items: center;
+  color:#fefefe;
 }
 
 .footer a {
@@ -119,7 +133,7 @@
 }
 
 .footer-info {
-    background-color: #74474F;
+  background-color: #74474F;
 }
 
 .footer-details {
