--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -15,16 +15,19 @@
         <div class="top-content-section">
             <div class="top-bar">
                 <div class="top-bar-left">
-                    <img src="http://placehold.it/150x100" alt="Associação Novo Rumo Atibaia">
+                    <a href="\index.html" rel="home">
+                        
+                        <img src="http://placehold.it/150x100" alt="Associação Novo Rumo Atibaia">
+                    </a> 
                 </div>
                 
                 <div class="top-bar-right">
                     <ul class="menu float-left">
                         <li>
-                            <a href="#">Quem somos</a>
+                            <a href=".\views\quem-somos.html">Quem somos</a>
                         </li>
                         <li>
-                            <a href="#">Dia-a-dia</a>
+                            <a href=".\views\dia-a-dia.html">Dia-a-dia</a>
                         </li>
                         <li>
                             <a href="#">Seja um doador</a>
