--- a/web/css/app.css
+++ b/web/css/app.css
@@ -119,6 +119,27 @@
 
 /* FIM BUTTON */
 
+
+/* INICIO NOTICIA*/
+.news1{
+
+margin-bottom: 80px;  
+}
+
+.news2{
+
+  margin-bottom: 80px;  
+  }
+
+
+  .news3{
+
+    margin-bottom: 80px;  
+    }
+/* FIM NOTICIA */
+
+
+
 /* INICIO FORMULARIO */
 
 .nome{
@@ -201,6 +222,25 @@
   
 }
 /* FIM DO FORMULARIO */
+
+
+
+
+/* INÍCIO QUEM SOMOS NOS */
+.descricao{
+  margin-top: 5rem;
+  margin-left: 2rem;
+  margin-bottom: 5rem;
+  box-sizing: border-box;
+  border-top: 5px dashed rgb(172, 54, 71);
+  border-left: 5px dashed  rgb(172, 54, 71);
+  border-right: 5px dashed  rgb(172, 54, 71);
+  border-bottom: 5px dashed  rgb(172, 54, 71);
+  color: #704825;
+
+}
+/* FIM QUEM SOMOS NOS */
+
 
 /* INÍCIO FOOTER */
 
