--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -24,19 +24,19 @@
                 <div class="top-bar-right">
                     <ul class="menu float-left">
                         <li>
-                            <a href=".\views\quem-somos.html">Quem somos</a>
+                            <a href="\views\quem-somos.html">Quem somos</a>
                         </li>
                         <li>
-                            <a href=".\views\dia-a-dia.html">Dia-a-dia</a>
+                            <a href="\views\dia-a-dia.html">Dia-a-dia</a>
                         </li>
                         <li>
-                            <a href="#">Seja um doador</a>
+                            <a href="\views\seja-doador.html">Seja um doador</a>
                         </li>
                         <li>
-                            <a href="#">Loja</a>
+                            <a href="\views\loja.html">Loja</a>
                         </li>
                         <li>
-                            <a href=".\views\contato.html"> Contato</a>
+                            <a href="\views\contato.html"> Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -95,7 +95,7 @@
                 <br>                
                 <textarea name="Mensagem" cols="40" rows="10" class="form-mensagem" aria-invalid="false"> </textarea>               
             </p>
-            <input type="submit" value="Enviar" class="button primary"
+            <input type="submit" value="Enviar" class="button primary">
         </form>
         
     </div>
