--- a/web/views/quem-somos.html
+++ b/web/views/quem-somos.html
@@ -28,19 +28,19 @@
                 <div class="top-bar-right">
                     <ul class="menu float-left">
                         <li>
-                            <a href=".\views\quem-somos.html">Quem somos</a>
+                            <a href="\views\quem-somos.html">Quem somos</a>
                         </li>
                         <li>
-                            <a href=".\views\dia-a-dia.html">Dia-a-dia</a>
+                            <a href="\views\dia-a-dia.html">Dia-a-dia</a>
                         </li>
                         <li>
-                            <a href="#">Seja um doador</a>
+                            <a href="\views\seja-doador.html">Seja um doador</a>
                         </li>
                         <li>
-                            <a href="#">Loja</a>
+                            <a href="\views\loja.html">Loja</a>
                         </li>
                         <li>
-                            <a href=".\views\contato.html"> Contato</a>
+                            <a href="\views\contato.html"> Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -71,19 +71,19 @@
                     Sua Qualidade de Vida a distância de um sim! Participe!</span></p>
                 </div>
             </div>
-            <div class="grid-y grid-padding-y ">
-                <div class="medium-4 large-4 small-12 cell missao"> 
+            <div class="grid-y grid-padding-y valores ">
+                <div class="medium-4 large-4 small-12 cell "> 
                     <h5>Missão</h5>
                     <p>
                         Atuar junto a jovens e adultos com deficiência, promovendo o desenvolvimento de suas capacidades e responsabilidades, sempre em conjunto com suas famílias. 
                     </p>
                 </div>
 
-                <div class="medium-4 large-4 small-12 cell missao">
+                <div class="medium-4 large-4 small-12 cell ">
                     <h5>Valores</h5>
                 </div>
 
-                <div class="medium-4 large-4 small-12 cell missao">
+                <div class="medium-4 large-4 small-12 cell ">
                     <h5>Visão</h5>
                 </div>
                 
