--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,7 +1,5 @@
 /* ESTILO GERAL */
-* {
-  
-}
+
 
 /* INICIO HEADER */
 
@@ -161,9 +159,10 @@ margin-bottom: 80px;
   
   width: 55%;
   height: 40px;  
-  background-color: #f3d5cdb6;
-  border: 2px solid #a1a1a1;;
-  border-radius: 25px;
+  background-color: #fefefe;
+  border: 1px solid #cacaca;
+  border-radius: 0;
+  box-shadow: inset 0 1px 2px hsla(0,0%,4%,.1);
   padding: 0 10px;
   color: rgb(2, 2, 2);
   
@@ -173,10 +172,11 @@ margin-bottom: 80px;
 .form-email  {
   
   width: 55%;
-  height: 40px;    
-  background-color: #f3d5cdb6;
-  border: 2px solid #a1a1a1;;
-  border-radius: 25px;
+  height: 40px;  
+  background-color: #fefefe;
+  border: 1px solid #cacaca;
+  border-radius: 0;
+  box-shadow: inset 0 1px 2px hsla(0,0%,4%,.1);
   padding: 0 10px;
   color: rgb(2, 2, 2);
   
@@ -186,10 +186,11 @@ margin-bottom: 80px;
 .form-assunto  {
   
   width: 55%;
-  height: 40px;    
-  background-color: #f3d5cdb6;
-  border: 2px solid #a1a1a1;;
-  border-radius: 25px;
+  height: 40px;  
+  background-color: #fefefe;
+  border: 1px solid #cacaca;
+  border-radius: 0;
+  box-shadow: inset 0 1px 2px hsla(0,0%,4%,.1);
   padding: 0 10px;
   color: rgb(2, 2, 2);
   
@@ -198,22 +199,24 @@ margin-bottom: 80px;
 .form-assumensagem  {
   
   width: 55%;
-  height: 40px;    
-  background-color: #f3d5cdb6;
-  border: 2px solid #a1a1a1;
-  border-radius: 25px;
+  height: 40px;  
+  background-color: #fefefe;
+  border: 1px solid #cacaca;
+  border-radius: 0;
+  box-shadow: inset 0 1px 2px hsla(0,0%,4%,.1);
   padding: 0 10px;
   color: rgb(2, 2, 2);
-  
 }
 
 .form-mensagem {
-  max-width: 55%;
-  background-color: #ecebe9;
-  color: #777;
-  border: 2px solid #a1a1a1;
-  border-radius: 15px;
-  padding: 5px;
+  width: 55%;
+  height: 40px;  
+  background-color: #fefefe;
+  border: 1px solid #cacaca;
+  border-radius: 0;
+  box-shadow: inset 0 1px 2px hsla(0,0%,4%,.1);
+  padding: 0 10px;
+  color: rgb(2, 2, 2);
  
 }
 
@@ -237,6 +240,11 @@ margin-bottom: 80px;
   border-right: 5px dashed  rgb(172, 54, 71);
   border-bottom: 5px dashed  rgb(172, 54, 71);
   color: #704825;
+
+}
+
+.valores{
+  margin-left: 2rem;
 
 }
 /* FIM QUEM SOMOS NOS */
