--- a/web/views/seja-doador.html
+++ b/web/views/seja-doador.html
@@ -48,6 +48,8 @@
             </div>
         </div>
         
+        
+        
         <div class="middle-content-section">
             <h1>Doações!</h1>
             <p>Colabora e nos ajude a continuar fazendo o bem!</p>
@@ -63,10 +65,19 @@
         </div>
     </div>  
     
-    <div class="grid-x grid-padding-x align-left">
+    <div class=" grid-y grid-padding-y align-center">
         
+        <img src="\images\doacao.jpg" alt="Desenho de doação" class="doacao">
         
-        
+        <div class="medium-4 large-4 small-12 cell "> 
+            <h5> Somos Independentes.</h5>
+            <p> Explicar aqui como eles fazem para se manter nos dias atuais.</p>
+        </div>
+
+        <div class="medium-4 large-4 small-12 cell "> 
+            <h5> Por que sua doação é importante para nós!</h5>
+            <p> Explicar sobre a importancia da doação.</p>
+        </div>
         
     </div>
     
