--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -57,10 +57,12 @@
             </a>
         </div>
     </div>
-
-  
     
-    <div role="form" class="forms">
+    <div class="grid-x grid-padding-x align-center">
+        
+       
+
+    <div role="form" class="forms medium-6 large-6 small-12 cell">
         
         <form action="index/contato" method="post" novalidate="novalidate">
             
@@ -101,6 +103,12 @@
         </form>
         
     </div>
+    <div class="medium-6 large-6 small-12 cell"> 
+        <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122769,-46.5545689,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a81e3e05:0x6558c6c63c8ed231!8m2!3d-23.1227739!4d-46.5523802" target = "_blank">
+            <img src="/images/mapa.jpg" alt="Mapa" class="mapa">
+        </a>
+        </div>
+</div>
     
     <div class="grid-x grid-padding-x footer footer-details">
         <div class="small-6 cell">
