--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -16,11 +16,11 @@
             <div class="top-bar">
                 <div class="top-bar-left">
                     <a href="\index.html" rel="home">
-                        
+
                         <img src="http://placehold.it/150x100" alt="Associação Novo Rumo Atibaia">
-                    </a> 
+                    </a>
                 </div>
-                
+
                 <div class="top-bar-right">
                     <ul class="menu float-left">
                         <li>
@@ -42,12 +42,12 @@
                 </div>
             </div>
         </div>
-        
+
         <div class="middle-content-section">
             <h1>Entre em contato conosco</h1>
             <p>É sempre um prazer ouvir você</p>
         </div>
-        
+
         <div class="bottom-content-section" data-magellan data-threshold="1">
             <a href="#main-content-section">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
@@ -57,59 +57,44 @@
             </a>
         </div>
     </div>
-    
-    <div class="grid-x grid-padding-x align-center">
-        
-       
 
-    <div role="form" class="forms medium-6 large-6 small-12 cell">
-        
-        <form action="index/contato" method="post" novalidate="novalidate">
-            
-            <p class="nome">
-                Nome (Obrigatório)
-                <br>
-                
-                <input type="text" name="Nome" value size="35" class="form-nome" aria-required="true" 
-                aria-invalid="false" placeholder="Digite seu Nome">        
-                
-            </p>
-            
-            
-            <p class="email">
-                E-mail (Obrigatório)
-                <br>
-                
-                <input type="email" name="email" value size="35" class="form-email" aria-required="true" 
-                aria-invalid="false" placeholder="Digite seu E-mail">        
-                
-            </p>
-            
-            <p class="assunto">
-                Assunto 
-                <br>
-                
-                <input type="text" name="Assunto" value size="35" class="form-assunto" aria-required="true" 
-                aria-invalid="false" placeholder>        
-                
-            </p>
-            
-            <p class="mensagem">
-                Sua Mensagem ("Obrigatório")
-                <br>                
-                <textarea name="Mensagem" cols="40" rows="10" class="form-mensagem" aria-invalid="false"> </textarea>               
-            </p>
+    <div class="grid-x grid-padding-x">
+        <div role="form" class="medium-6 large-6 small-12 cell">
+            <div class="medium-6 cell">
+                <label>Nome
+                    <input type="text">
+                </label>
+            </div>
+
+            <div class="medium-6 cell">
+                <label>Email
+                    <input type="email">
+                </label>
+            </div>
+
+            <div class="medium-6 cell">
+                <label>Assunto
+                    <input type="text">
+                </label>
+            </div>
+
+            <div class="medium-6 cell">
+                <label>Mensagem
+                    <textarea cols="40" rows="10" aria-invalid="false"></textarea>
+                </label>
+            </div>
+
             <input type="submit" value="Enviar" class="button primary">
-        </form>
-        
-    </div>
-    <div class="medium-6 large-6 small-12 cell"> 
-        <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122769,-46.5545689,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a81e3e05:0x6558c6c63c8ed231!8m2!3d-23.1227739!4d-46.5523802" target = "_blank">
-            <img src="/images/mapa.jpg" alt="Mapa" class="mapa">
-        </a>
         </div>
-</div>
+        <div class="medium-6 large-6 small-12 cell">
+            <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122769,-46.5545689,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a81e3e05:0x6558c6c63c8ed231!8m2!3d-23.1227739!4d-46.5523802"
+                target="_blank">
+                <img src="/images/mapa.jpg" alt="Mapa" class="mapa">
+            </a>
+        </div>
+    </div>
     
+
     <div class="grid-x grid-padding-x footer footer-details">
         <div class="small-6 cell">
             <h4>Conheça a Novo Rumo</h4>
@@ -119,7 +104,7 @@
                 </p>
                 <p>Rua Papa Paulo VI, nr 182 - Vila Thais</p>
                 <p>Atibaia, Sao Paulo, Brazil 12942-110</p>
-                
+
             </div>
             <div class="info">
                 <p>
@@ -128,7 +113,7 @@
                 <p>contato@novorumoatibaia.com.br</p>
                 <p>(11) 3402-1623</p>
             </div>
-            
+
         </div>
         <div class="small-6 cell">
             <h4>Curta-nos!</h4>
@@ -136,27 +121,24 @@
                 et, gravida blandit nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
                 egestas. Integer ullamcorper dui sapien, non semper lorem suscipit pharetra. Donec eu leo elementum, sagittis
                 massa ut, tempor turpis. Nullam fringilla arcu a leo pellentesque, in.</p>
+        </div>
+    </div>
+    <div class="grid-padding-x footer footer-info">
+        <div class="cell footer-left">
+            <div class="contact-details">
+                <p>2017 Associação Novo Rumo criado com carinho por
+                    <a href="http://victorfontana.com.br">Victor Fontana</a>
+                </p>
             </div>
         </div>
-        <div class="grid-padding-x footer footer-info">
-            <div class="cell footer-left">
-                <div class="contact-details">
-                    <p>2017 Associação Novo Rumo criado com carinho por
-                        <a href="http://victorfontana.com.br">Victor Fontana</a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        
-        <script type="text/javascript" src="./js/jquery.js"></script>
-        <script type="text/javascript" src="./js/foundation.js"></script>
-        <script>
-            $(document).foundation();
-        </script>
-        
-        
-    </body>
-    
-    
-    
-    </html>
+    </div>
+
+    <script type="text/javascript" src="./js/jquery.js"></script>
+    <script type="text/javascript" src="./js/foundation.js"></script>
+    <script>
+        $(document).foundation();
+    </script>
+
+</body>
+
+</html>
