Ajustes na página de contato

--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -58,8 +58,18 @@
         </div>
     </div>
 
+    <div class="medium-12 large-12 small-12 cell">
+        <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122769,-46.5545689,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a81e3e05:0x6558c6c63c8ed231!8m2!3d-23.1227739!4d-46.5523802"
+            target="_blank">
+            <img src="/images/mapa-maior.png" alt="Map">
+        </a>
+    </div>
     <div class="grid-x grid-padding-x">
-        <div role="form" class="medium-6 large-6 small-12 cell">
+        <div class="cell text-center">
+            <h2>Entre em contato</h1>
+        </div>
+
+        <div role="form" class="medium-12 large-12 small-12 cell">
             <div class="medium-6 cell">
                 <label>Nome
                     <input type="text">
@@ -86,14 +96,8 @@
 
             <input type="submit" value="Enviar" class="button primary">
         </div>
-        <div class="medium-6 large-6 small-12 cell">
-            <a href="https://www.google.com.br/maps/place/R.+Papa+Paulo+VI,+182+-+Vila+Thais,+Atibaia+-+SP/@-23.122769,-46.5545689,17z/data=!3m1!4b1!4m5!3m4!1s0x94cec0e1a81e3e05:0x6558c6c63c8ed231!8m2!3d-23.1227739!4d-46.5523802"
-                target="_blank">
-                <img src="/images/mapa.jpg" alt="Mapa" class="mapa">
-            </a>
-        </div>
     </div>
-    
+
 
     <div class="grid-x grid-padding-x footer footer-details">
         <div class="small-6 cell">
