--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -70,31 +70,23 @@
         </div>
 
         <div role="form" class="medium-12 large-12 small-12 cell">
-            <div class="medium-6 cell">
                 <label>Nome
                     <input type="text">
                 </label>
-            </div>
-
-            <div class="medium-6 cell">
+            
                 <label>Email
                     <input type="email">
                 </label>
-            </div>
 
-            <div class="medium-6 cell">
                 <label>Assunto
                     <input type="text">
                 </label>
-            </div>
 
-            <div class="medium-6 cell">
                 <label>Mensagem
                     <textarea cols="40" rows="10" aria-invalid="false"></textarea>
                 </label>
-            </div>
 
-            <input type="submit" value="Enviar" class="button primary">
+            <input type="submit" value="Enviar" class="button primary large">
         </div>
     </div>
 
