--- a/scss/my-foundation.scss
+++ b/scss/my-foundation.scss
@@ -1,5 +1,6 @@
 @import "settings"; 
 @import "foundation";
+@import "custom/button";
 
 @include foundation-global-styles;
 @include foundation-xy-grid-classes;
