Ajustes na estrutura do scss

--- a/scss/my-foundation.scss
+++ b/scss/my-foundation.scss
@@ -48,3 +48,5 @@
   Add your scss files below to structure your project styles
 */
 @import "custom/button";
+@import "custom/header";
+@import "custom/footer";
