--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="/css/my-foundation.min.css">
     <link rel="stylesheet" href="/css/app-effects.css" async>
     <link class="fonte" href="https://fonts.googleapis.com/css?family=Sura|Fredericka the Great" rel="stylesheet" async>
-    <link rel="stylesheet" href="/css/app.css" async>
 </head>
 
 <body>
@@ -70,11 +69,11 @@
         </div>
 
         <div role="form" class="medium-12 large-12 small-12 cell">
-                <label>Nome
+                <label>Nome (Obrigatório)
                     <input type="text">
                 </label>
             
-                <label>Email
+                <label>Email (Obrigatório)
                     <input type="email">
                 </label>
 
@@ -82,7 +81,7 @@
                     <input type="text">
                 </label>
 
-                <label>Mensagem
+                <label>Mensagem (Obrigatório)
                     <textarea cols="40" rows="10" aria-invalid="false"></textarea>
                 </label>
 
