--- a/web/css/my-foundation.css
+++ b/web/css/my-foundation.css
@@ -6223,3 +6223,85 @@ a.thumbnail {
 */
 .button {
   text-transform: uppercase; }
+
+.middle-content-section h1 {
+  font-family: 'Fredericka the Great', cursive; }
+
+.top-bar,
+.top-bar ul {
+  background-color: transparent; }
+
+.hero-full-screen {
+  height: 90vh;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  background: url("http://placehold.it/1500/3d3d3d/?text=+") center center no-repeat;
+  background-size: cover; }
+
+.hero-full-screen .middle-content-section {
+  text-align: center;
+  color: #fefefe; }
+
+.hero-full-screen .top-content-section {
+  width: 100%; }
+
+.hero-full-screen .bottom-content-section {
+  padding: 1rem; }
+
+.hero-full-screen .bottom-content-section svg {
+  height: 2.75rem;
+  width: 2.75rem;
+  fill: #fefefe; }
+
+.hero-full-screen .top-bar {
+  background: transparent; }
+
+.hero-full-screen .top-bar .menu {
+  background: transparent; }
+
+.hero-full-screen .top-bar .menu-text {
+  color: #fefefe; }
+
+.hero-full-screen .top-bar .menu li {
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center; }
+
+.hero-full-screen .top-bar .menu a {
+  color: darkgrey;
+  font-weight: bold; }
+
+.footer {
+  padding: 1rem 0;
+  align-items: center;
+  color: #fefefe; }
+
+.footer a {
+  color: #fefefe;
+  font-weight: bold; }
+
+.footer-info {
+  background-color: #74474F; }
+
+.footer-details {
+  background-color: #C15666;
+  margin-top: 40px; }
+
+.footer .info p {
+  margin-bottom: 0; }
+
+.facebook {
+  background-image: url(.\images\facebook.png); }
