--- a/web/views/quem-somos.html
+++ b/web/views/quem-somos.html
@@ -8,10 +8,9 @@
 <head>
     <meta charset="utf-8">
     <title>Associação Novo Rumo Atibaia</title>
-    <link rel="stylesheet" href="/css/foundation.min.css">
+    <link rel="stylesheet" href="/css/app.min.css">
     <link rel="stylesheet" href="/css/app-effects.css" async>
     <link class="fonte" href="https://fonts.googleapis.com/css?family=Sura|Fredericka the Great" rel="stylesheet" async>
-    <link rel="stylesheet" href="/css/app.css" async>
 </head>
 
 <body>
