--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -16,10 +16,7 @@
     <div data-sticky-container>
         <div data-sticky data-margin-top='0' data-top-anchor="header:bottom" data-btm-anchor="content:bottom">
             <div class="top-bar topbar-sticky-shrink">
-                <div class="top-bar-title">
-                    <img src="https://placehold.it/150x38" alt="" />
-                </div>
-                <div class="top-bar-right">
+                <div class="top-bar-center">
                     <ul class="menu">
                         <li>
                             <a href="#">Thing 1</a>
