--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -1,32 +1,31 @@
-$topbar-sticky-shrink-padding: 2rem; // controls the un-stuck height of topbar
-$topbar-sticky-shrink-padding-stuck: 1rem; // controls the is stuck height of topbar
+$topbar-sticky-shrink-padding: 1rem; // controls the un-stuck height of topbar
 $topbar-sticky-shrink-bg: #fff;
-
+$topbar-sticky-stuck-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
 .topbar-sticky-shrink {
-  padding:$topbar-sticky-shrink-padding;
-  transition: padding 0.25s ease;
-  background: $topbar-sticky-shrink-bg;
-
-  .menu {
+    padding: $topbar-sticky-shrink-padding;
+    transition: padding 0.25s ease;
     background: $topbar-sticky-shrink-bg;
-  }
-  
-  .top-bar-center {
-      margin: 0 auto;
-  }
+    .menu {
+        background: $topbar-sticky-shrink-bg;
+    }
+    .top-bar-center {
+        margin: 0 auto;
+    }
 }
 
 .is-stuck .topbar-sticky-shrink {
-  padding: $topbar-sticky-shrink-padding-stuck;
-  transition: padding 0.25s ease;
+    transition: padding 0.25s ease;
+    -webkit-box-shadow: $topbar-sticky-stuck-shadow;
+    -moz-box-shadow: $topbar-sticky-stuck-shadow;
+    box-shadow: $topbar-sticky-stuck-shadow;
 }
 
 [data-sticky] {
-  width: 100%;
+    width: 100%;
 }
 
 // for demo only
 .topbar-sticky-shrink-header {
-  padding: 10rem 0;
-  background-size: cover;
+    padding: 10rem 0;
+    background-size: cover;
 }
