--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -6,7 +6,7 @@
     <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="/css/app.min.css">
     <link rel="stylesheet" href="/css/app-effects.css" async>
-    <link class="fonte" href="https://fonts.googleapis.com/css?family=Sura|Fredericka the Great" rel="stylesheet" async>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" async>
 </head>
 
 <body>
@@ -19,13 +19,19 @@
                 <div class="top-bar-center">
                     <ul class="menu">
                         <li>
-                            <a href="#">Thing 1</a>
+                            <a href="#">Quem somos</a>
                         </li>
                         <li>
-                            <a href="#">Thing 2</a>
+                            <a href="#">Dia-a-dia</a>
                         </li>
                         <li>
-                            <a href="#">Thing 3</a>
+                            <a href="#">Seja um doador</a>
+                        </li>
+                        <li>
+                            <a href="#">Loja</a>
+                        </li>
+                        <li>
+                            <a href="#">Contato</a>
                         </li>
                     </ul>
                 </div>
