--- a/web/css/app.css
+++ b/web/css/app.css
@@ -6328,3 +6328,17 @@ a.thumbnail {
 .topbar-sticky-shrink-header {
   padding: 10rem 0;
   background-size: cover; }
+
+.prod-name {
+  background-color: rgba(104, 255, 247, 0.158);
+  border-bottom: 1px solid #eeeeee;
+  height: 45px;
+  width: 100%;
+  border-radius: 0 0 10px 10px; }
+
+.product-grid {
+  border-radius: 10px 10px 0 0;
+  height: 20rem; }
+
+h3 {
+  font-family: "Crimson Text", "Times New Roman", serif; }
