--- a/web/views/loja.html
+++ b/web/views/loja.html
@@ -65,17 +65,17 @@
     <div class="grid-x grid-padding-x align-center">
         <h2 class="topicos">Produtos</h2>
     </div>
-    <div class="grid-x grid-padding-x text-center">
-        <div class="medium-4 large-4 small-12 cell product-grid">
+    <div class="grid-x grid-padding-x text-center ">
+        <div class="medium-4 large-4 small-12 cell">
             <figure>
                 <a>
-                    <img src="\images\artesanal3.jpg" alt="Casa artesanal">
+                    <img src="\images\artesanal3.jpg" alt="Casa artesanal" class="product-grid">
                 </a>
             </figure>
-            <div class="grid-x align-center">
-                <h1>Carteiras e caixas</h1>
+            <div class="grid-x align-center prod-name">
+                <h3>Carteiras e caixas</h3>
             </div>
-            <div class="grid-x align-center">                    
+            <div class="grid-x align-center ">                    
                 <div class="medium-4 large-4 small-12 cell">
                     <span class="value">R$15,00</span>
                 </div>
@@ -85,16 +85,16 @@
             </div>
             
         </div>
-        <div class="medium-4 large-4 small-12 cell product-grid">
+        <div class="medium-4 large-4 small-12 cell">
             <figure>
                 <a>
-                    <img src="\images\produto.jpg" alt="Casa artesanal">
+                    <img src="\images\produto.jpg" alt="Casa artesanal" class="product-grid">
                 </a>
             </figure>
-            <div class="grid-x align-center">
-                <h1>Pratos e xícaras</h1>
+            <div class="grid-x align-center prod-name">
+                <h3>Pratos e xícaras</h3>
             </div>
-            <div class="grid-x align-center">
+            <div class="grid-x align-center ">
                 
                 <div class="medium-4 large-4 small-12 cell">
                     <span class="value">R$15,00</span>
@@ -107,11 +107,11 @@
         <div class="medium-4 large-4 small-12 cell product-grid">
             <figure>
                 <a>
-                    <img src="\images\granola.jpg" alt="Casa artesanal">
+                    <img src="\images\granola.jpg" alt="Casa artesanal" class="product-grid">
                 </a>
             </figure>
-            <div class="grid-x align-center">
-                <h1>Granolas</h1>
+            <div class="grid-x align-center prod-name">
+                <h3>Granolas</h3>
             </div>
             <div class="grid-x align-center">                   
                 <div class="medium-4 large-4 small-12 cell">
@@ -123,54 +123,54 @@
             </div>
         </div>
     </div>
-            
-            <div class="grid-x grid-padding-x footer footer-details">
-                <div class="small-6 cell">
-                    <h4>Conheça a Novo Rumo</h4>
-                    <div class="info">
-                        <p>
-                            <b>Endereço</b>
-                        </p>
-                        <p>Rua Papa Paulo VI, nr 182 - Vila Thais</p>
-                        <p>Atibaia, Sao Paulo, Brazil 12942-110</p>
-                        
-                    </div>
-                    <div class="info">
-                        <p>
-                            <b>Contato</b>
-                        </p>
-                        <p>contato@novorumoatibaia.com.br</p>
-                        <p>(11) 3402-1623</p>
-                    </div>
-                    
-                </div>
-                <div class="small-6 cell">
-                    <h4>Curta-nos!</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu sagittis felis. Etiam ante dui, iaculis vel augue
-                        et, gravida blandit nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
-                        egestas. Integer ullamcorper dui sapien, non semper lorem suscipit pharetra. Donec eu leo elementum, sagittis
-                        massa ut, tempor turpis. Nullam fringilla arcu a leo pellentesque, in.</p>
-                    </div>
-                </div>
-                <div class="grid-padding-x footer footer-info">
-                    <div class="cell footer-left">
-                        <div class="contact-details">
-                            <p>2017 Associação Novo Rumo criado com carinho por
-                                <a href="http://victorfontana.com.br">Victor Fontana</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
+    
+    <div class="grid-x grid-padding-x footer footer-details">
+        <div class="small-6 cell">
+            <h4>Conheça a Novo Rumo</h4>
+            <div class="info">
+                <p>
+                    <b>Endereço</b>
+                </p>
+                <p>Rua Papa Paulo VI, nr 182 - Vila Thais</p>
+                <p>Atibaia, Sao Paulo, Brazil 12942-110</p>
                 
-                <script type="text/javascript" src="./js/jquery.js"></script>
-                <script type="text/javascript" src="./js/foundation.js"></script>
-                <script>
-                    $(document).foundation();
-                </script>
-                
-                
-            </body>
+            </div>
+            <div class="info">
+                <p>
+                    <b>Contato</b>
+                </p>
+                <p>contato@novorumoatibaia.com.br</p>
+                <p>(11) 3402-1623</p>
+            </div>
             
-            
-            
-            </html>
+        </div>
+        <div class="small-6 cell">
+            <h4>Curta-nos!</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu sagittis felis. Etiam ante dui, iaculis vel augue
+                et, gravida blandit nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis
+                egestas. Integer ullamcorper dui sapien, non semper lorem suscipit pharetra. Donec eu leo elementum, sagittis
+                massa ut, tempor turpis. Nullam fringilla arcu a leo pellentesque, in.</p>
+            </div>
+        </div>
+        <div class="grid-padding-x footer footer-info">
+            <div class="cell footer-left">
+                <div class="contact-details">
+                    <p>2017 Associação Novo Rumo criado com carinho por
+                        <a href="http://victorfontana.com.br">Victor Fontana</a>
+                    </p>
+                </div>
+            </div>
+        </div>
+        
+        <script type="text/javascript" src="./js/jquery.js"></script>
+        <script type="text/javascript" src="./js/foundation.js"></script>
+        <script>
+            $(document).foundation();
+        </script>
+        
+        
+    </body>
+    
+    
+    
+    </html>
