--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -6,7 +6,8 @@
     <title>Associação Novo Rumo Atibaia</title>
     <link rel="stylesheet" href="/css/app.min.css">
     <link rel="stylesheet" href="/css/app-effects.css" async>
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" async>
+    <!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" async> -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" async>
 </head>
 
 <body>
@@ -72,7 +73,7 @@
             </div>
         </div>
 
-        <div class="grid-x grid-padding-x footer footer-details">
+        <div class="grid-x grid-padding-x footer">
             <div class="small-6 cell">
                 <h4>Conheça a Novo Rumo</h4>
                 <div class="info">
@@ -98,15 +99,6 @@
                     augue et, gravida blandit nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
                     fames ac turpis egestas. Integer ullamcorper dui sapien, non semper lorem suscipit pharetra. Donec eu
                     leo elementum, sagittis massa ut, tempor turpis. Nullam fringilla arcu a leo pellentesque, in.</p>
-            </div>
-        </div>
-        <div class="grid-padding-x footer footer-info">
-            <div class="cell footer-left">
-                <div class="contact-details">
-                    <p>2017 Associação Novo Rumo criado com carinho por
-                        <a href="http://victorfontana.com.br">Victor Fontana</a>
-                    </p>
-                </div>
             </div>
         </div>
     </div>
