--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -1,11 +1,15 @@
 $topbar-sticky-shrink-padding: 1rem; // controls the un-stuck height of topbar
 $topbar-sticky-shrink-bg: #fff;
 $topbar-sticky-stuck-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
+$topbar-sticky-font-size: 0.8em;
+
 .topbar-sticky-shrink {
     padding: $topbar-sticky-shrink-padding;
     transition: padding 0.25s ease;
     background: $topbar-sticky-shrink-bg;
     text-transform: uppercase;
+    font-weight: bold;
+    font-size: $topbar-sticky-font-size;
     .menu {
         background: $topbar-sticky-shrink-bg;
     }
@@ -25,7 +29,6 @@ $topbar-sticky-stuck-shadow: 0px 3px 7px 0px rgba(0, 0, 0, 0.2);
     width: 100%;
 }
 
-// for demo only
 .topbar-sticky-shrink-header {
     padding: 10rem 0;
     background-size: cover;
