--- a/scss/custom/_footer.scss
+++ b/scss/custom/_footer.scss
@@ -6,7 +6,7 @@
     background: url(/images/sparkles.gif);
     background-position: top;
     background-repeat: repeat;
-    background-color: #C15666;
+    background-color: #f5928b; //#00b9c1
     color: #fff
 }
 
