--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -69,7 +69,7 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: #ba1755,
+  primary: #f5928b,
   secondary: #767676,
   success: #3adb76,
   warning: #ffae00,
