Ajustes gerais no css rodapé

--- a/scss/custom/_menu.scss
+++ b/scss/custom/_menu.scss
@@ -8,7 +8,7 @@ $topbar-sticky-font-size: 0.8em;
     transition: padding 0.25s ease;
     background: $topbar-sticky-shrink-bg;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: 700;
     font-size: $topbar-sticky-font-size;
     .menu {
         background: $topbar-sticky-shrink-bg;
