--- a/scss/custom/_footer.scss
+++ b/scss/custom/_footer.scss
@@ -6,10 +6,59 @@
     background: url(/images/sparkles.gif);
     background-position: top;
     background-repeat: repeat;
-    background-color: #f5928b; //#00b9c1
-    color: #fff
+    background-color: #f5928b;
+    color: #fff;
+    padding-top: 40px;
+    padding-bottom: 60px;
+    h6 {
+        text-transform: uppercase;
+        font-weight: 700;
+        color: #ffcf00;
+    }
+    p {
+        margin-bottom: 0;
+    }
+    .info {
+      padding-top: 45px;
+    }
 }
 
-.footer .info p {
-    margin-bottom: 0;
+.facebook {
+    position: relative;
+    top: 6px;
+    left: 5px;
+    background-color: rgba(0, 0, 0, 0.1);
+    img {
+        position: absolute;
+        top: 7px;
+        left: 10px;
+    }
+}
+
+.email {
+    position: relative;
+    top: 6px;
+    left: 15px;
+    background-color: rgba(0, 0, 0, 0.1);
+    img {
+        position: absolute;
+        top: 8px;
+        left: 3px;
+    }
+}
+
+.social-icon {
+    height: 30px;
+    width: 30px;
+    -webkit-transition-duration: 0.5s;
+    -webkit-transform: rotate(45deg);
+    display: inline-block;
+    padding-left: 0px;
+    vertical-align: top;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    img {
+        -webkit-transform: rotate(-45deg);
+    }
 }
