--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="/css/app.min.css">
     <link rel="stylesheet" href="/css/app-effects.css" async>
     <!-- <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet" async> -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet" async>
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet" async>
 </head>
 
 <body>
@@ -69,38 +69,45 @@
                     <textarea cols="40" rows="10" aria-invalid="false"></textarea>
                 </label>
 
-                <input type="submit" value="Enviar" class="button primary large">
+                <input type="submit" value="Enviar" class="button primary hollow large">
             </div>
         </div>
 
-        <div class="grid-x grid-padding-x footer">
-            <div class="small-6 cell">
-                <h4>Conheça a Novo Rumo</h4>
-                <div class="info">
-                    <p>
-                        <b>Endereço</b>
-                    </p>
-                    <p>Rua Papa Paulo VI, nr 182 - Vila Thais</p>
-                    <p>Atibaia, Sao Paulo, Brazil 12942-110</p>
-
+        <div class="footer">
+            <div class="grid-x grid-padding-x ">
+                <div class="small-6 cell">
+                    <h6>Sobre nós</h6>
                 </div>
-                <div class="info">
-                    <p>
-                        <b>Contato</b>
-                    </p>
-                    <p>contato@novorumoatibaia.com.br</p>
-                    <p>(11) 3402-1623</p>
+                <div class="small-6 cell">
+                    <h6>Contato</h6>
                 </div>
+            </div>
+            <div class="grid-x grid-padding-x">
+                <div class="small-6 cell">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. </br>
+                        In eu sagittis felis. Etiam ante dui, iaculis vel augue et, gravida blandit nunc.</p>
+                </div>
+                <div class="small-6 cell">
+                    <a href="#">
+                        <div class="facebook social-icon">
+                            <img src="/images/fb.png" />
+                        </div>
+                    </a>
+                    <a href="#">
+                        <div class="email social-icon">
+                            <img src="/images/mail.png" />
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="grid-x grid-padding-x info">
+                <div class="small-6 cell">
+                    <p>Desenvolvido com carinho por Victor Fontana</p>
+                </div>
+            </div>
 
-            </div>
-            <div class="small-6 cell">
-                <h4>Curta-nos!</h4>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In eu sagittis felis. Etiam ante dui, iaculis vel
-                    augue et, gravida blandit nunc. Pellentesque habitant morbi tristique senectus et netus et malesuada
-                    fames ac turpis egestas. Integer ullamcorper dui sapien, non semper lorem suscipit pharetra. Donec eu
-                    leo elementum, sagittis massa ut, tempor turpis. Nullam fringilla arcu a leo pellentesque, in.</p>
-            </div>
         </div>
+
     </div>
 
     <script type="text/javascript" src="../js/jquery.js"></script>
