--- a/scss/custom/_footer.scss
+++ b/scss/custom/_footer.scss
@@ -33,6 +33,9 @@
         top: 7px;
         left: 10px;
     }
+    &:hover {
+        background-color: #3b5998
+    }
 }
 
 .email {
@@ -44,6 +47,9 @@
         position: absolute;
         top: 8px;
         left: 3px;
+    }
+    &:hover {
+        background-color: #00b9c1;
     }
 }
 
