--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -14,3 +14,12 @@
 h3 {
     font-family: "Crimson Text", "Times New Roman", serif;
 }
+
+.blue-content {
+    padding: 120px 0px 190px 0;
+    background: url(/images/sparkles.gif);
+    background-position: top;
+    background-repeat: repeat;
+    background-color: #00b9c1;
+    color: #fff;
+}
