--- a/web/views/contato.html
+++ b/web/views/contato.html
@@ -26,6 +26,9 @@
                             <a href="#">Seja um doador</a>
                         </li>
                         <li>
+                            <a href="#">Eventos</a>
+                        </li>
+                        <li>
                             <a href="#">Loja</a>
                         </li>
                         <li>
