--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -11,15 +11,19 @@
     height: 20rem;
 }
 
-h3 {
-    font-family: "Crimson Text", "Times New Roman", serif;
-}
-
 .blue-content {
     padding: 120px 0px 190px 0;
     background: url(/images/sparkles.gif);
     background-position: top;
     background-repeat: repeat;
-    background-color: #00b9c1;
+    background-color: $primary-color;
     color: #fff;
+}
+
+.white-content {
+    padding: 120px 0px 190px 0;
+    background: url(/images/sparkles-white.png);
+    .pink {
+        color: $secondary-color;
+    }
 }
