--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -41,3 +41,12 @@ h3 {
         color: $secondary-color;
     }
 }
+
+.pink-content {
+    background: url(/images/bg-top.png);
+    background-position: top;
+    background-repeat: repeat;
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+    height:5000px;
+}
