--- a/scss/custom/_general.scss
+++ b/scss/custom/_general.scss
@@ -50,8 +50,10 @@ h3 {
     -webkit-perspective: 1000;
     height:5000px;
     padding-top: 140px;
-    h2, h3 {
-        color: white;
+    color: #fff;
+    h6 {
+        text-transform: uppercase;
+        color: #ffcf00;
     }
 }
 
