--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -149,8 +149,8 @@ $header-styles: (
   medium: (
     'h1': ('font-size': 48),
     'h2': ('font-size': 6.75em),
-    'h3': ('font-size': 31),
-    'h4': ('font-size': 25),
+    'h3': ('font-size': 4.75em),
+    'h4': ('font-size': 1.75em),
     'h5': ('font-size': 20),
     'h6': ('font-size': 16),
   ),
